--- a/Navbar.html
+++ b/Navbar.html
@@ -10,7 +10,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style type="text/css">
-		
+		.navbar {
+			height: 50px;
+			background-color: brown;
+			border-radius: 0px;
+		}
+		ul.list-item-PC {
+			padding-inline-start: 0;
+			list-style-type: none;
+			line-height: 50px;
+			display: flex;
+			margin-bottom: 10px;
+			justify-content: center;
+		}
+		li.item-PC {
+			padding: 0px 23px;
+		}
+		a.name-item {
+			text-decoration: none;
+			font-size: 18px;
+			color: #fff;
+		}
 	</style>
 </head>
 <body>
@@ -24,5 +44,7 @@
 			<li class="item-PC"><a href="" class="name-item">Login</a></li>
 		</ul>
 	</div>
+	<input type="checkbox" id="check_mobile" class="check-view-mobile">
+	<div class="den"></div>
 </body>
 </html>
