Thêm chi tiết cho chuyển sang Mobile
Thêm chi tiết

--- a/Navbar.html
+++ b/Navbar.html
@@ -44,6 +44,7 @@
 			<li class="item-PC"><a href="" class="name-item">Login</a></li>
 		</ul>
 	</div>
+	<div class="bar"><i class="fas fa-bars"></i></div>
 	<input type="checkbox" id="check_mobile" class="check-view-mobile">
 	<div class="den"></div>
 </body>
