Code lại toàn bộ html
Code lại html

--- a/Navbar.html
+++ b/Navbar.html
@@ -10,41 +10,20 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style type="text/css">
-		.navbar {
-			height: 50px;
-			background-color: brown;
-			border-radius: 0px;
-		}
-		ul.list-item-PC {
-			padding-inline-start: 0;
-			list-style-type: none;
-			line-height: 50px;
-			display: flex;
-			margin-bottom: 10px;
-			justify-content: center;
-		}
-		li.item-PC {
-			padding: 0px 23px;
-		}
-		a.name-item {
-			text-decoration: none;
-			font-size: 18px;
-			color: #fff;
-		}
+
 	</style>
 </head>
 <body>
-	<div class="navbar">
-		<ul class="list-item-PC">
-			<li class="item-PC"><a href="" class="name-item">Home</a></li>
-			<li class="item-PC"><a href="" class="name-item">News</a></li>
-			<li class="item-PC"><a href="" class="name-item">Login</a></li>
-			<li class="item-PC"><a href="" class="name-item">Home</a></li>
-			<li class="item-PC"><a href="" class="name-item">News</a></li>
-			<li class="item-PC"><a href="" class="name-item">Login</a></li>
+	<div class="navbar-headder">
+		<ul class="list-item-pc">
+			<li class="item-pc"><a href="" class="name-item-pc">Home</a></li>
+			<li class="item-pc"><a href="" class="name-item-pc">Account</a></li>
+			<li class="item-pc"><a href="" class="name-item-pc">Logout</a></li>
+			<li class="item-pc"><a href="" class="name-item-pc">Switch</a></li>
 		</ul>
+		<div class="bars"><i class="fas fa-bars"></i></div>
+		<input type="checkbox" class="check-mobile" id="check-mobile">
+		<div class="den"></div>
 	</div>
-	<input type="checkbox" id="check_mobile" class="check-view-mobile">
-	<div class="den"></div>
 </body>
 </html>
