--- a/Navbar.html
+++ b/Navbar.html
@@ -10,7 +10,41 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style type="text/css">
-
+		.navbar-headder {
+			height: 50px;
+			background-color: brown;
+			display: flex;
+			width: 100%;
+		}
+		ul.list-item-pc {
+			list-style-type: none;
+			line-height: 50px;
+			display: flex;
+			margin: auto;
+		}
+		li.item-pc {
+			padding: 0px 25px;
+		}
+		a.name-item-pc {
+			color: #fff;
+			font-family: sans-serif;
+			font-size: 18px;
+		}
+		.bars {
+			line-height: 50px;
+			font-size: 18px;
+			color: #fff;
+			display: none;
+		}
+		@media screen and (max-width: 900px) {
+			ul.list-item-pc{
+				display: none;
+			}
+			.bars {
+				padding-left: 2rem;
+				display: block;
+			}
+		}
 	</style>
 </head>
 <body>
@@ -18,6 +52,8 @@
 		<ul class="list-item-pc">
 			<li class="item-pc"><a href="" class="name-item-pc">Home</a></li>
 			<li class="item-pc"><a href="" class="name-item-pc">Account</a></li>
+			<li class="item-pc"><a href="" class="name-item-pc">Logout</a></li>
+			<li class="item-pc"><a href="" class="name-item-pc">Switch</a></li>
 			<li class="item-pc"><a href="" class="name-item-pc">Logout</a></li>
 			<li class="item-pc"><a href="" class="name-item-pc">Switch</a></li>
 		</ul>
